# backend/src/main/resources/doc/openapi.json
@@ -49,7 +49,7 @@
                 "description": "GET the account information of the current user.",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -728,7 +728,7 @@
                         "type": "string"
                     },
                     "provider": {
-                        "$ref": "#/components/schemas/SimpleHealthcareProvider"
+                        "$ref": "#/components/schemas/HealthcareProviderId"
                     },
                     "datetime": {
                         "type": "string",
@@ -739,12 +739,47 @@
             "SimpleHealthcareProvider": {
                 "title": "SimpleHealthcareProvider",
                 "type": "object",
+                "description": "Simplified healthcare provider record.",
                 "properties": {
-                    "id": {
+                    "locationId": {
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    "institutionId": {
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    "title": {
+                        "type": "string"
+                    },
+                    "city": {
+                        "type": "string"
+                    },
+                    "postalCode": {
+                        "type": "string"
+                    },
+                    "street": {
+                        "type": "string"
+                    },
+                    "houseNumber": {
+                        "type": "string"
+                    },
+                    "category": {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        }
+                    },
+                    "specialization": {
+                        "type": "string"
+                    },
+                    "lat": {
+                        "type": "string"
+                    },
+                    "lng": {
                         "type": "string"
                     }
-                },
-                "description": "Simplified healthcare provider record."
+                }
             },
             "Settings": {
                 "title": "Settings",
@@ -770,6 +805,116 @@
                     "appointmentReminderEmailsOptIn",
                     "newsletterOptIn"
                 ]
+            },
+            "UpdateStatusMessage": {
+                "title": "UpdateStatusMessage",
+                "type": "object",
+                "properties": {
+                    "message": {
+                        "type": "string"
+                    }
+                },
+                "description": "Update status of the update of healthcare providers"
+            },
+            "HealthcareProviderId": {
+                "title": "HealthcareProviderId",
+                "type": "object",
+                "description": "Composite key of the healthcare provider",
+                "properties": {
+                    "locationId": {
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    "institutionId": {
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                }
+            },
+            "HealthcareProviderDetails": {
+                "title": "HealthcareProviderDetails",
+                "type": "object",
+                "description": "The details of a single healthcare provider record.",
+                "properties": {
+                    "locationId": {
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    "institutionId": {
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    "title": {
+                        "type": "string"
+                    },
+                    "institutionType": {
+                        "type": "string"
+                    },
+                    "street": {
+                        "type": "string"
+                    },
+                    "houseNumber": {
+                        "type": "string"
+                    },
+                    "city": {
+                        "type": "string"
+                    },
+                    "postalCode": {
+                        "type": "string"
+                    },
+                    "phoneNumber": {
+                        "type": "string"
+                    },
+                    "fax": {
+                        "type": "string"
+                    },
+                    "email": {
+                        "type": "string"
+                    },
+                    "website": {
+                        "type": "string"
+                    },
+                    "ico": {
+                        "type": "string"
+                    },
+                    "category": {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        }
+                    },
+                    "specialization": {
+                        "type": "string"
+                    },
+                    "careForm": {
+                        "type": "string"
+                    },
+                    "careType": {
+                        "type": "string"
+                    },
+                    "substitute": {
+                        "type": "string"
+                    },
+                    "lat": {
+                        "type": "string"
+                    },
+                    "lng": {
+                        "type": "string"
+                    }
+                }
+            },
+            "HealthcareProviderList": {
+                "title": "HealthcareProviderList",
+                "type": "object",
+                "description": "Simplified list of healthcare providers",
+                "properties": {
+                    "healthcareProviders": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/SimpleHealthcareProvider"
+                        }
+                    }
+                }
             }
         },
         "securitySchemes": {
